{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "DoWork",
            "id": "c69ceb98-c6a0-4183-906e-3a0afb3c3f9b",
            "actions": [
                {
                    "name": "PressDown",
                    "type": "Button",
                    "id": "3660c0c3-4d92-4b1b-81f7-469c21ec387f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "PressUp",
                    "type": "Button",
                    "id": "a569c041-2d2a-4d21-bdb5-6303cdc1ef29",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a9e2a0d0-d6ec-4859-8790-e4b44f9bcd3d",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0fe0ad9-6f9e-4b90-a907-7e653b247fcf",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "27da6d03-762c-418a-aca2-9fa2e28c7e64",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5cbe382c-efa2-4cb2-9e06-ab40206e73f8",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}